# mutan-api

./: Cargo.toml  README.md
.github/workflows/: release.yml
migrations/: 20230525015254_user.down.sql  20230525015254_users.up.sql  20230525015254_usr.down.sql  20230525015254_usr.up.sql  20230526033133_task.down.sql  20230526033133_task.up.sql  20230526033133_tasks.up.sql  20230526042703_train.down.sql  20230526042703_train.up.sql  20230526042703_training.down.sql  20230526042703_training.up.sql  20230526042703_trainings.up.sql  20230526054435_active_trainings.down.sql  20230526054435_active_trainings.up.sql  20230526054435_train_ins.down.sql  20230526054435_train_ins.up.sql  20230526054435_training_instances.down.sql  20230526054435_training_instances.up.sql  20230528050458_task_ins.down.sql  20230528050458_task_ins.up.sql  20230528050458_task_instances.down.sql  20230528050458_task_instances.up.sql  20230530024210_tmp_training_results.down.sql  20230530024210_tmp_training_results.up.sql  20230530032247_train_res.down.sql  20230530032247_train_res.up.sql  20230530032247_training_results.down.sql  20230530032247_training_results.up.sql  20230602011810_task_res.down.sql  20230602011810_task_res.up.sql  20230602011810_task_results.down.sql  20230602011810_task_results.up.sql
mutan-admin/: Cargo.toml  trainings.toml
mutan-admin/src/: main.rs
seeding/: Cargo.toml  seeding.toml
seeding/src/: main.rs
src/: filters.rs  handlers.rs  main.rs  models.rs  rejects.rs  util.rs
src/filter/: create_task.rs  create_task_instance.rs  create_user.rs  delete_task.rs  mod.rs  (+12 more)
(+22 files in other folders)
