[package]
name = "mutan-backend"
version = "0.0.2"
edition = "2021"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3"
