[package]
name = "mutan-admin"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = "4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.7"
